--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -1,14 +1,53 @@
 <!DOCTYPE html>
-
 {% load staticfiles %}
+
 <html>
 <head>
-	<title>Rango</title>
+    <title>Rango</title>
 </head>
+<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}" /> <!-- CSS -->
+<script src="{% static "js/bootstrap.min.js" %}"></script> <!-- JavaScript -->
+
 <body>
-	<h1>Rango says...</h1>
-	hello world <strong>{{boldmessage}}</strong><br>
-	<a href="about">About</a>
-	<img src="{% static "images/my.png" %}" alt="here is the image.">
+    <h1 class="text-center">Rango says...hello world!</h1>
+    <br>
+    <br>
+    <div class="row">
+        <div class="col-md-offset-2 col-md-4">
+            {% if categories %}
+            <ul>
+                {% for category in categories %}
+                <li>
+                    <a href="/rango/category/{{category.slug}}">
+                        {{category.name}}
+                    </a>
+                </li>
+                {% endfor %}
+            </ul>
+            {% else %}
+            <strong>There are no categories present.</strong>
+            {% endif %}
+
+        </div>
+        <div class="col-md-4">
+            {% if pages %}
+            <ul>
+                {% for page in pages %}
+                <li>
+                    <a href="/rango/category/">
+                        {{page.title}}
+                    </a>
+                </li>
+                {% endfor %}
+            </ul>
+            {% else %}
+            <strong>There are no categories present.</strong>
+            {% endif %}
+
+        </div>
+
+    </div>
+
 </body>
 </html>
+
