--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -28,6 +28,7 @@
             <strong>There are no categories present.</strong>
             {% endif %}
 
+             <button class="bt bt-success"><a href="/rango/add_category">Add Category</a></button>
         </div>
         <div class="col-md-4">
             {% if pages %}
@@ -43,10 +44,13 @@
             {% else %}
             <strong>There are no categories present.</strong>
             {% endif %}
+             <button class="bt bt-success"><a href="/rango/add_page">Add Page</a></button>
 
         </div>
 
     </div>
+
+
 
 </body>
 </html>
