studying chapter 9. Unable to load register template

--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -28,7 +28,7 @@
             <strong>There are no categories present.</strong>
             {% endif %}
 
-             <button class="bt bt-success"><a href="/rango/add_category">Add Category</a></button>
+            <button class="bt bt-success"><a href="/rango/add_category">Add Category</a></button>
         </div>
         <div class="col-md-4">
             {% if pages %}
@@ -44,10 +44,15 @@
             {% else %}
             <strong>There are no categories present.</strong>
             {% endif %}
-             <button class="bt bt-success"><a href="/rango/add_page">Add Page</a></button>
+            <button class="bt bt-success"><a href="/rango/add_page">Add Page</a></button>
 
         </div>
 
+
+    </div>
+
+    <div class="text-center">
+        <a href="/rango/register">Register here.</a>
     </div>
 
 
