Completed chapter 9 upto 9.4. Working with registeration looking fine.

--- a/tango_with_django_project/templates/rango/register.html
+++ b/tango_with_django_project/templates/rango/register.html
@@ -12,11 +12,11 @@
 	Rango says <strong>Register here!</strong>
 	<form id="user_form" method="POST" action="/rango/register/">
 		{% csrf_token %}
-		{{ user_form as_p }}
-		{{ user_form as_p }}
+		{{ user_form.as_p }}
+		{{ profile_form.as_p }}
+		<input type="submit" value="Register"></input>
 	</form>
 
-	<input type="submit" name="submit"> R</input>
 
 	{% endif %}
 
