--- a/tango_with_django_project/templates/rango/category.html
+++ b/tango_with_django_project/templates/rango/category.html
@@ -1,27 +1,31 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Rango</title>
-</head>
-<body>
-	<!-- first check for category items -->
-	{% if category %}
-	<h1> {{ category.name }}</h1>
-	{% if pages %}
-	<ul>
-		{% for page in pages %}
-		<li><a href="{{ page.url }}">{{ page.title }}</a></li>
-		{% endfor %}
-	</ul>
-	{% else %}
-	<strong>No pages currently in category.</strong>
-	{% endif %}
-	{% else %}
-	The specified category {{ category_name }} does not exist!
-	{% endif %}
+{% extends "rango/base.html" %}
+{% load staticfiles %}
+{% block title %}
+{{category.name}}
+{% endblock title %}
+{% block body_block %}
+{{category.name}}
+{% if category %}
+<h1> {{ category.name }}</h1>
+{% if pages %}
+<ul>
+	{% for page in pages %}
+	<li><a href="{{ page.url }}">{{ page.title }}</a></li>
+	{% endfor %}
+</ul>
+{% else %}
+<strong>No pages currently in category.</strong>
+{% endif %}
+{% else %}
+The specified category {{ category_name }} does not exist!
+{% endif %}
 
+{% if user.is_authenticated %}
 	<button><a href="/rango/category/{{category.slug}}/add_page"> Add a page</a></button>
-	<!-- <button><a href='{{url_add_page}}' > Add a page</a></button> -->
+{% endif %}
 
-</body>
-</html>
+
+{% endblock body_block %}
+
+
+
